--- a/apache_spark/thesis/internetQuellen.bib
+++ b/apache_spark/thesis/internetQuellen.bib
@@ -1,12 +1,44 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sascha Patrick Lorenz at 2015-02-14 00:44:46 +0100 
+%% Created for Sascha Patrick Lorenz at 2015-02-15 18:09:24 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{kry14,
+	Author = {EsotericSoftware},
+	Date-Added = {2015-02-15 16:32:59 +0000},
+	Date-Modified = {2015-02-15 16:35:06 +0000},
+	Month = {01},
+	Title = {Documentation for Kryo Serializer URL:\{https://github.com/EsotericSoftware/kryo}},
+	Year = {2015. \note{Aufgerufen am 12.02.2015}}}
+
+@misc{rdd12,
+	Author = {Apache Spark},
+	Date-Added = {2015-02-15 16:05:18 +0000},
+	Date-Modified = {2015-02-15 16:17:51 +0000},
+	Month = {12},
+	Title = {Tuning Spark URL:\{http://spark.apache.org/docs/1.2.0/tuning.html}},
+	Year = {2014. \note{Aufgerufen am 10.02.2015}}}
+
+@misc{tah14,
+	Author = {Johan Hong},
+	Date-Added = {2015-02-15 15:25:33 +0000},
+	Date-Modified = {2015-02-15 15:33:00 +0000},
+	Month = {10},
+	Title = {Spark, Spark Streaming and Tachyon URL: \{http://www.slideshare.net/Johanhong1/spark-spark-streaming-tachyon-40548210}},
+	Year = {2014. \{Aufgerufen am 14.02.2015}}}
+
+@misc{tac14,
+	Author = {Gluster},
+	Date-Added = {2015-02-15 14:24:28 +0000},
+	Date-Modified = {2015-02-15 14:26:12 +0000},
+	Month = {08},
+	Title = {Glusterfs and Tachyon URL: \url{http://blog.gluster.org/2014/08/glusterfs-and-tachyon/}},
+	Year = {2014. \note{Aufgerufen am 16.12.2014}}}
 
 @misc{flc14,
 	Author = {Pivotal EMC},
@@ -75,10 +107,10 @@
 @misc{ap11,
 	Author = {Andrew Pavlo, Erik Paulson, et al.},
 	Date-Added = {2015-02-08 16:31:45 +0000},
-	Date-Modified = {2015-02-08 16:38:01 +0000},
+	Date-Modified = {2015-02-15 17:09:24 +0000},
 	Month = {08},
 	Title = {A Comparison of Approaches to Large-Scale Data Analysis. Brown University, Providence URL: \url{http://database.cs.brown.edu/projects/mapreduce-vs-dbms/}},
-	Year = {2009}}
+	Year = {2009. \note{Aufgerufen am 16.12.2014}}}
 
 @misc{or14,
 	Author = {Lascon Storage},
