--- a/apache_spark/thesis/literaturVerzeichnis.bib
+++ b/apache_spark/thesis/literaturVerzeichnis.bib
@@ -1,12 +1,20 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sascha Patrick Lorenz at 2015-02-13 23:42:01 +0100 
+%% Created for Sascha Patrick Lorenz at 2015-02-15 16:46:07 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{six11,
+	Author = {Danah Boyd, Kate Crawford},
+	Date-Added = {2015-02-15 15:45:09 +0000},
+	Date-Modified = {2015-02-15 15:46:07 +0000},
+	Publisher = {Oxford Internet Institute},
+	Title = {Six Provocations for Big Data},
+	Year = {2011}}
 
 @book{dag02,
 	Author = {R. Kramer, R. Gupta, M.L. Soffa},
