--- a/apache_spark/thesis/bdas.tex
+++ b/apache_spark/thesis/bdas.tex
@@ -65,15 +65,19 @@ Die Hauptbestandteile von HDFS sind der sogenannte NameNode, der die Metadaten d
 \begin{figure}[htb!] 
 \centering
 \includegraphics[width=1.0\textwidth]{bilder/2_3_stack.png}
-\caption{Der Datamanagement-Layer im BDAS mit HDFS und Tachyon}
+\caption{Der Datamanagement-Layer im BDAS mit Tachyon und diversen Filesystemen \protect\citeint{tac14}.}
 \label{fig:datamgmtlayer}
 \end{figure} 
 
  
 
-In Abbildung \ref{fig:datamgmtlayer} wird die Datenmanagementschicht des BDAS nochmals detaillierter dargestellt. Hier ist erkennbar, dass reine Hadoop-Implementierungen direkt auf dem HDFS aufsetzen, da das HDFS für \textit{MapReduce} optimiert ist. 
+In Abbildung \ref{fig:datamgmtlayer} wird die Datenmanagementschicht des BDAS detaillierter dargestellt. Es lässt erkennen, dass zwischen den Frameworks und dem Data-Layer ein optimiertes Caching-Framework für sämtliche Dateisystemaufrufe zum Einsatz kommen kann.  
 
-Kommt hingegen Spark zum Einsatz, lässt sich wahlweise direkt das \textit{HDFS} ansprechen oder alternativ eine Zwischenschicht nutzen, die auf das In-Memory-Modell von Spark zugeschnitten ist. Dies ist innerhalb des BDAS das verteilte Dateisystem Tachyon. Hier werden die zu verarbeitenden oder zu analysierenden Datensätze direkt in den Hauptspeicher des jeweiligen Knoten in Form eines Cache gehalten. Somit werden Lade- und Speicheroperationen auf Massenspeicher minimiert und eine massiv höhere Ausführungsgeschwindigkeit erreicht. Unterhalb von Tachyon ist nach wie vor ein HDFS für die persistente Datenhaltung notwendig. Alternativ kann auch das Amazon S3-File-System eingesetzt werden. Tachyon wurde direkt innerhalb der AMPLabs entwickelt und ist mittlerweile fester Bestandteil des BDAS.  
+Hier lässt sich wahlweise direkt das \textit{HDFS} bzw. dessen Alternativen ansprechen oder alternativ die Zwischenschicht nutzen, die insbesondere auf das In-Memory-Modell von Spark zugeschnitten ist. Dies ist innerhalb des BDAS das verteilte Dateisystem Tachyon. Hier werden die zu verarbeitenden oder zu analysierenden Datensätze direkt in den Hauptspeicher des jeweiligen Knoten in Form eines Cache gehalten. Somit werden Lade- und Speicheroperationen auf Massenspeicher minimiert und eine massiv höhere Ausführungsgeschwindigkeit erreicht.
+
+Tachyon besteht aus einem Master, der in der Regel dem physischen Master einer Spark-Infrastruktur entspricht. Dieser deligiert und überwacht die einzelnen Tachyon Worker-Nodes, die auch den Spark Worker-Nodes entsprechen. Tachyon implementiert auf jedem Knoten ein eigenes RAM-Filesystem, das den Hauptspeicher abseits des JVM-Heaps nutzt \citeint{tah14}.
+
+Unterhalb von Tachyon ist nach wie vor ein HDFS für die persistente Datenhaltung notwendig. Alternativ kann auch das Amazon S3-File-System, Glsuterfs oder Posix eingesetzt werden. Tachyon wurde direkt innerhalb der AMPLabs entwickelt und ist mittlerweile fester Bestandteil des BDAS.  
 
 
 \section{Apache Spark}
@@ -111,14 +115,14 @@ MLbase ist eine Sammlung von Bibliotheken und Werkzeugen für Machine-Learning-A
 
 \begin{figure}[htb!]
 \centering
-\includegraphics[width=1.0\textwidth]{bilder/2_4_3_mlbase.png}
-\caption{Die Bestandteile der MLbase \protect\citeint{ml10}}
+\includegraphics[width=0.5\textwidth]{bilder/2_4_3_mlbase.png}
+\caption{Die Bestandteile der MLbase }
 \label{fig:mlbase}
 \end{figure} 
  
 
 
-Die MLlib ist eine verteilte Machine-Learning-Bibliothek die für die Spark-Laufzeitumgebung entwickelt wurde und die bekannten Algorithmen für Probleme wie Klassifikation, Regression, Clustering und kollaboratives Filtern enthält.
+Die MLlib ist eine verteilte Machine-Learning-Bibliothek die für die Spark-Laufzeitumgebung entwickelt wurde und die bekannten Algorithmen für Probleme wie Klassifikation, Regression, Clustering und kollaboratives Filtern enthält (Vergleich \citeint{ml10}).
 
 Bei MLI handelt es sich um eine API, die es ermöglicht, selbst ML-Features zu entwickeln und in erster Linie für komplexere Problemstellungen geeignet ist. Mit MLI lassen sich die Funktionen direkt gegen Spark entwickeln, gegebenenfalls unter Zuhilfenahme der Bibliotheken der MLlib.
 
